# sdwan-orbit

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  FRESH_START_PLAN.md  LICENSE.txt  README.md  TODO.md  WORKFLOW.md  claude.md  pyproject.toml
examples/: devices.yaml
src/sdwan_orbit/: __init__.py  backup.py  cli.py  exceptions.py  models.py  onboarding.py  orbit.py  session.py
src/sdwan_orbit/parsers/: __init__.py  containerlab.py
tests/: __init__.py
tests/topology/: README.md  cedge-bootstrap.cfg  controller-config.xml  manager-config.xml  orbit-devices.yaml  sdwan-simple.clab.yml  validator-config.xml
tests/unit/: test_control_plane_onboarding.py  test_onboard_edges.py  test_template_attachment.py
